--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ layout: home
 <ol>
     {% for publication in site.data.profile.publications %}
       <li>
-        "{{ publication.title }}". Published in {{ publication.journal }}. Pub. on {{ publication.date }}.
+        <b>"{{ publication.title }}"</b>. Published in {{ publication.journal }}. Pub. on {{ publication.date }}.
       </li>
     {% endfor %}
   </ol>
