--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ layout: default
 
 <!-- Educational Qualification Section -->
 
-<h4>Educational Qualification</h4>
+<div class="edu-tbl">
+  <h4>Educational Qualification</h4>
 <table>
     <thead>
       <tr>
@@ -35,6 +36,7 @@ layout: default
       {% endfor %}
     </tbody>
   </table>
+</div>
   
 
 <!-- Publications Sections -->
