--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
 <ol>
   {% for presentation in site.data.profile.presentations %}
   <li>
-    <b>{{ presentation.title }}</b>. Presented at {{ presentation.conf }}, {{ presentation.date }}.
+    <b>"{{ presentation.title }}"</b>. Presented at {{ presentation.conf }}, {{ presentation.date }}.
   </li>
 {% endfor %}
 </ol>
