--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
 <ol>
     {% for publication in site.data.profile.publications %}
       <li>
-        <b>“{{ publication.title }}”</b>. Published in {{ publication.journal }}. Pub. on {{ publication.date }}. <span class="pdf">[<a href="{{ publication.link }}" target="_blank">PDF</a>]
+        <b>“{{ publication.title }}”</b>. Published in {{ publication.journal }}. Pub. on {{ publication.date }}. <span class="pdf">[<a href="{{ publication.link }}" target="_blank" class="pdf-link">PDF</a>]
           <svg class="new-tab-icon" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15" height="15" viewBox="0 0 48 48">
         <path d="M 41.470703 4.9863281 A 1.50015 1.50015 0 0 0 41.308594 5 L 27.5 5 A 1.50015 1.50015 0 1 0 27.5 8 L 37.878906 8 L 22.439453 23.439453 A 1.50015 1.50015 0 1 0 24.560547 25.560547 L 40 10.121094 L 40 20.5 A 1.50015 1.50015 0 1 0 43 20.5 L 43 6.6894531 A 1.50015 1.50015 0 0 0 41.470703 4.9863281 z M 12.5 8 C 8.3754991 8 5 11.375499 5 15.5 L 5 35.5 C 5 39.624501 8.3754991 43 12.5 43 L 32.5 43 C 36.624501 43 40 39.624501 40 35.5 L 40 25.5 A 1.50015 1.50015 0 1 0 37 25.5 L 37 35.5 C 37 38.003499 35.003499 40 32.5 40 L 12.5 40 C 9.9965009 40 8 38.003499 8 35.5 L 8 15.5 C 8 12.996501 9.9965009 11 12.5 11 L 22.5 11 A 1.50015 1.50015 0 1 0 22.5 8 L 12.5 8 z"></path>
         </svg>
@@ -63,7 +63,7 @@ layout: default
 <ol>
   {% for presentation in site.data.profile.presentations %}
   <li>
-    <b>“{{ presentation.title }}”</b>. Presented at {{ presentation.conf }} organised by {{ presentation.by }}, {{ presentation.date }}.
+    <b>“{{ presentation.title }}”</b>. Presented at {{ presentation.conf }} organised by <em>{{ presentation.by }}</em>, {{ presentation.date }}.
   </li>
 {% endfor %}
 </ol>
@@ -72,7 +72,7 @@ layout: default
 <h5>Work Experience</h5>
   <ol>
     {% for exp in site.data.profile.workexp %}
-      <li>Worked as a <b>{{ exp.position }}</b> at {{ exp.institution }} from {{ exp.time }}.</li>
+      <li>Worked as a <b>{{ exp.position }}</b> at <em>{{ exp.institution }}</em> from {{ exp.time }}.</li>
     {% endfor %}
   </ol>
   
@@ -84,6 +84,7 @@ layout: default
     <li>
       <strong>Company:</strong> {{ internship.company }}<br>
       <strong>Position:</strong> {{ internship.position }}<br>
+      <strong>Location:</strong> {{ internship.location }}<br>
       <strong>Year:</strong> {{ internship.year }}
     </li>
   {% endfor %}
