--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
   </ol>
 
 <!-- Papers Presented Section -->
-<h5>Papers Presented</h5>
+<h5>Conferences/Seminars/Webinars/Workshops</h5>
 <ol>
   {% for presentation in site.data.profile.presentations %}
   <li>
