include designation and institution

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
                 
                   <p>
                     <b>Name:</b> Nazm Us Saqib <br>
-                    <b>Address:</b> Lucknow, Uttar Pradesh, India 226018<br>
+                    <b>Designation:</b> Research Scholar <br>
+                    <b>Institution:</b> Maulana Azad National Urdu University, Lucknow Campus <br>
+                    <b>Address:</b> Lucknow, Uttar Pradesh, India<br>
                     <b>DOB:</b> 17/08/1999 <br>
                     <b>Email:</b> <a href="mailto:24phen005lk@manuu.edu.in">24phen005lk@manuu.edu.in</a><br>
                     <b>Ph. No.:</b> &#43;91 7881111304</p>
